mapdiv spacing fixed

--- a/src/Components/Destination/Destination.css
+++ b/src/Components/Destination/Destination.css
@@ -1,5 +1,7 @@
 .coverDiv {
     text-align: center;
+    width: 100vw;
+    height: 65vh;
     /* position: relative; */
 }
 .coverimg {
