--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -11,18 +11,19 @@
 }
 
 .mapdiv {
+  position: relative;
   width: 70vw;
-  height: 70vh;
+  /* height: 70vh; */
   margin-left: auto;
   margin-right: auto;
 }
 @media only screen and (max-width: 576px) and (min-width: 360px) {
   .mapdiv {
-    height: 40vh;
+    /* height: 40vh; */
     width: 80vw;
     
   }
   .destDiv {
-    margin-top: 45vh;
+    /* margin-top: 45vh; */
   }
 }
